<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    android:orientation="vertical">


    <include
        android:id="@+id/rl_header"
        layout="@layout/layout_title" />


    <RelativeLayout
        android:id="@+id/ll_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/themeColor1"
        android:padding="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/rl_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="到账银行"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/bank_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/bank_tv" />

        <TextView
            android:id="@+id/bank_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_bank_account"
            android:text="中国农业银行"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_bank_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:text="（尾号0576）"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_money"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/themeColor1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/shoukuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/dp_10"
            android:text="收款金额"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:text="¥"
                android:textColor="@color/white"
                android:textSize="36sp" />


            <EditText
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:focusable="false"
                android:hint="0.00"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="36sp" />
        </LinearLayout>

        <View style="@style/line1" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/number_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/listDivider"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/ll_money">

        <LinearLayout
            android:id="@+id/number1_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="?android:attr/listDivider"
            android:gravity="center"
            android:showDividers="middle">

            <LinearLayout

                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"

                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout

                    android:id="@+id/calculator_one_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/one_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <!-- 4 -->
                <LinearLayout
                    android:id="@+id/calculator_four_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/four_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <!-- 8,5 -->

            <LinearLayout

                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/calculator_two_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/two_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/calculator_five_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/five_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <!-- 9,6 -->
            <LinearLayout

                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/calculator_three_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/three_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/calculator_six_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/six_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/number2_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number1_ll"
            android:layout_weight="2"
            android:divider="?android:attr/listDivider"
            android:gravity="center"
            android:showDividers="middle">


            <!--1 ,0-->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">


                <LinearLayout
                    android:id="@+id/calculator_seven_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/seven_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/calculator_zero_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:clickable="true"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zero_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>


            <!--2,.  -->

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">


                <LinearLayout
                    android:id="@+id/calculator_eight_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/eight_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/calculator_point_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/point"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/calculator_nine_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nine_num"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/calculator_twozero_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/key_selector"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:src="@drawable/delete1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/shape_theme_btn_25"
        android:text="立即支付"
        android:textColor="@color/btn_text_color" />


</LinearLayout>